<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs_file" translatable="false">com.example.passengerapp.PREFERENCE_FILE_KEY</string>
    <string name="app_name" translatable="false">PassengerApp</string>
    <string name="no_devices_found">No BLE devices found</string>
    <string name="chat_title">Chat</string>
    <string name="device_list_title">Pair with new device</string>
    <string name="location_required_error">The location permission is required to support Bluetooth Low Energy communication</string>
    <string name="grant_permission_prompt">Grant Location Permission</string>
    <string name="active_scan_message">Scanning for devices</string>
    <string name="bt_not_enabled">Please enable Bluetooth in order to scan for devices</string>
    <string name="enable_bluetooth_prompt">Enable Bluetooth</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device</string>
    <string name="chat_confirm_message">Would you like to chat with %1$s</string>
    <string name="chat_deny_button">No</string>
    <string name="chat_confirm_button">Yes</string>
    <string name="no_connected_device_message">Not connected to a device</string>
    <string name="connected_device_message">Connected to: </string>
    <string name="connect_device_prompt">Connect with nearby devices</string>
    <string name="disconnect_from_device_prompt">Disconnect from vehicle</string>
    <string name="chatting_with_device">Chatting with %1$s</string>
    <string name="scanning_header">Choose a device to travel with:</string>
    <string name="seeHistory_prompt">See history</string>


    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="logoutSuccess">Logged out successfully</string>
    <string name="password">Password</string>
    <string name="signUp">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="authentication">Authentication</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="welcome">Welcome</string>
    <string name="userInfo">User info</string>
    <string name="nearbyDevices">Nearby devices</string>
    <string name="buy_vouchers_prompt">Buy vouchers</string>
    <string name="my_vouchers_prompt">My vouchers</string>
    <string name="numzones">Number of zones: </string>
    <string name="numTrips">Number of trips: </string>
    <string name="totalPrice">Total price: </string>
    <string name="pay">Pay</string>
    <string name="zones">Zones</string>
    <string name="zonesMin">zones</string>
    <string name="trips">Trips</string>
    <string name="tripsBought">Trips successfully bought</string>
    <string name="tripBought">Trip successfully bought</string>
    <string name="ok">Ok</string>
    <string name="notEnoughVoyages">Not enough trips for that zone</string>


    <string-array name="zonesArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="tripsArray">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="viewZonesMap">View zones map</string>
    <string name="Warning">Warning</string>
    <string name="wantToDisconnect">Are you sure that you want to disconnect from the current vehicle?</string>
    <string name="deleteHistory">Delete history</string>
    <string name="deleteHistoryConfirmDialog">Are you sure that you want to delete your history?</string>

</resources>
