<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/not_connected_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/connect_device_message"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@drawable/rounded_corner"
            android:gravity="center"
            android:shadowRadius="@android:integer/config_longAnimTime"
            android:text="@string/no_connected_device_message"
            android:textColor="#000000"

            android:textSize="18dp" />

        <Button
            android:id="@+id/buyVouchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/buy_vouchers_prompt"/>
        <Button
            android:id="@+id/myVouchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/my_vouchers_prompt"/>

        <Button
            android:id="@+id/connect_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connect_device_prompt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connected_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/connected_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_message_button"/>
    </LinearLayout>

</FrameLayout>