<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="#424242"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#424242"
            android:textColor="#000000" />

        <LinearLayout
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/signUp"
                android:textSize="15dp" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/logIn"
                android:textSize="15dp"  />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/myGrey"
            android:drawableStart="@mipmap/google_icon"
            android:paddingStart="16dp"
            android:text="Google"
            android:textAlignment="center"
            android:textColor="@color/myBlack"
            android:textSize="15dp" />

        <Button
            android:id="@+id/testApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:text="test app"
            android:visibility="invisible"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>